--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = eos.settings
+DJANGO_SETTINGS_MODULE = app.settings
 python_files = tests.py test_*.py *_tests.py
 
 [flake8]
