--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,6 @@ stages:
   - tests
   - dev
   - staging
-  - preprod
-  - build
   - prod
 
 tests:
@@ -74,36 +72,11 @@ staging:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
-    - docker build --pull -t "$CI_REGISTRY/eos:staging-$CI_COMMIT_SHORT_SHA" .
+    - docker build --pull -t "$CI_REGISTRY/eos:$CI_COMMIT_TAG" -t "$CI_REGISTRY/eos:staging-$CI_COMMIT_TAG" .
     - docker run --rm -v /var/run/docker.sock:/var/run/docker.sock "$CI_REGISTRY/aqua-scanner:5.0" scan --local "$CI_REGISTRY/eos:staging-$CI_COMMIT_SHORT_SHA" --host https://aqua.uksouth.bink.sh:30001/ --user scanner --password $AQUA_PASSWORD --show-negligible --policies Bink --text
-    - docker push "$CI_REGISTRY/eos:staging-$CI_COMMIT_SHORT_SHA"
+    - docker push "$CI_REGISTRY/eos:staging-$CI_COMMIT_SHORT_SHA" "$CI_REGISTRY/eos:$CI_COMMIT_TAG"
   only:
-    - staging
-
-preprod:
-  stage: preprod
-  environment:
-    name: preprod
-  before_script:
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-  script:
-    - docker build --pull -t "$CI_REGISTRY/eos:preprod-$CI_COMMIT_SHORT_SHA" .
-    - docker run --rm -v /var/run/docker.sock:/var/run/docker.sock "$CI_REGISTRY/aqua-scanner:5.0" scan --local "$CI_REGISTRY/eos:preprod-$CI_COMMIT_SHORT_SHA" --host https://aqua.uksouth.bink.sh:30001/ --user scanner --password $AQUA_PASSWORD --show-negligible --policies Bink --text
-    - docker push "$CI_REGISTRY/eos:preprod-$CI_COMMIT_SHORT_SHA"
-  when: manual
-  only:
-    - master
-
-build:
-  stage: build
-  before_script:
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-  script:
-    - docker build --pull -t "$CI_REGISTRY/eos:$CI_COMMIT_TAG" .
-    - docker run --rm -v /var/run/docker.sock:/var/run/docker.sock "$CI_REGISTRY/aqua-scanner:5.0" scan --local "$CI_REGISTRY/eos:$CI_COMMIT_TAG" --host https://aqua.uksouth.bink.sh:30001/ --user scanner --password $AQUA_PASSWORD --show-negligible --policies Bink --text
-    - docker push "$CI_REGISTRY/eos:$CI_COMMIT_TAG"
-  only:
-    - tags
+    - tag
 
 release-prod:
   stage: prod
