--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,9 +76,9 @@ staging:
     - docker run --rm -v /var/run/docker.sock:/var/run/docker.sock "$CI_REGISTRY/aqua-scanner:5.0" scan --local "$CI_REGISTRY/eos:staging-$CI_COMMIT_SHORT_SHA" --host https://aqua.uksouth.bink.sh:30001/ --user scanner --password $AQUA_PASSWORD --show-negligible --policies Bink --text
     - docker push "$CI_REGISTRY/eos:staging-$CI_COMMIT_SHORT_SHA" "$CI_REGISTRY/eos:$CI_COMMIT_TAG"
   only:
-    - tag
+    - tags
 
-release-prod:
+prod:
   stage: prod
   image: binkops.azurecr.io/tagbot:latest
   environment:
