--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,9 +72,9 @@ staging:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
-    - docker build --pull -t "$CI_REGISTRY/eos:$CI_COMMIT_TAG" -t "$CI_REGISTRY/eos:staging-$CI_COMMIT_TAG" .
+    - docker build --pull -t "$CI_REGISTRY/eos:staging-$CI_COMMIT_TAG" .
     - docker run --rm -v /var/run/docker.sock:/var/run/docker.sock "$CI_REGISTRY/aqua-scanner:5.0" scan --local "$CI_REGISTRY/eos:staging-$CI_COMMIT_TAG" --host https://aqua.uksouth.bink.sh:30001/ --user scanner --password $AQUA_PASSWORD --show-negligible --policies Bink --text
-    - docker push "$CI_REGISTRY/eos:staging-$CI_COMMIT_TAG" "$CI_REGISTRY/eos:$CI_COMMIT_TAG"
+    - docker push "$CI_REGISTRY/eos:staging-$CI_COMMIT_TAG"
   only:
     - tags
 
@@ -84,7 +84,7 @@ prod:
   environment:
     name: prod
   script:
-    - tagbot --username "$CI_REGISTRY_USER" --password "$CI_REGISTRY_PASSWORD" --source "$CI_REGISTRY/eos:$CI_COMMIT_TAG" --tag "prod-$CI_COMMIT_TAG"
+    - tagbot --username "$CI_REGISTRY_USER" --password "$CI_REGISTRY_PASSWORD" --source "$CI_REGISTRY/eos:staging-$CI_COMMIT_TAG" --tag "prod-$CI_COMMIT_TAG"
   when: manual
   only:
     - tags
