--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ tests:
     AMEX_API_HOST: "http://localhost"
     AMEX_CLIENT_ID: "dummy-amex-client-id"
     AMEX_CLIENT_SECRET: "dummy-amex-client-secret"
+    SSO_ENABLED: "False"
   before_script: &setup
     - pip install pipenv
     - pipenv install --dev --system --deploy --ignore-pipfile
