MER-990: corrected flake8, balck and mypy errors

--- a/mypy.ini
+++ b/mypy.ini
@@ -9,3 +9,6 @@ django_settings_module = "app.settings"
 
 [mypy-*.migrations.*]
 ignore_errors = True
+
+[mypy_django_plugin]
+ignore_missing_settings = true
