move from dockerhub to ghcr

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
 
 tests:
   stage: tests
-  image: binkhq/python:3.8
+  image: ghcr.io/binkhq/python:3.8
   variables: &variables
     POSTGRES_DB: eos
     POSTGRES_HOST_AUTH_METHOD: trust
@@ -32,7 +32,7 @@ tests:
 
 complexity:
   stage: tests
-  image: binkhq/python:3.8
+  image: ghcr.io/binkhq/python:3.8
   variables: *variables
   before_script: *setup
   script:
@@ -40,7 +40,7 @@ complexity:
 
 style:
   stage: tests
-  image: binkhq/python:3.8
+  image: ghcr.io/binkhq/python:3.8
   variables: *variables
   before_script: *setup
   script:
@@ -48,7 +48,7 @@ style:
 
 type-check:
   stage: tests
-  image: binkhq/python:3.8
+  image: ghcr.io/binkhq/python:3.8
   variables: *variables
   before_script: *setup
   script:
