--- a/Pipfile
+++ b/Pipfile
@@ -14,15 +14,15 @@ rq = "*"
 sentry-sdk = "*"
 authlib = "*"
 tenacity = "*"
+gunicorn = "*"
 
 [dev-packages]
 coverage = "*"
-black = "*"
+black = "==21.7b0"
 flake8 = "*"
 mypy = "*"
 xenon = "*"
 responses = "*"
 django-stubs = "*"
-
-[pipenv]
-allow_prereleases = true
+types-requests = "*"
+types-redis = "*"
