--- a/Pipfile
+++ b/Pipfile
@@ -15,10 +15,11 @@ sentry-sdk = "*"
 authlib = "*"
 tenacity = "*"
 gunicorn = "*"
+dj-database-url = "*"
 
 [dev-packages]
 coverage = "*"
-black = "==21.7b0"
+black = "==21.8b0"
 flake8 = "*"
 mypy = "*"
 xenon = "*"
@@ -26,3 +27,5 @@ responses = "*"
 django-stubs = "*"
 types-requests = "*"
 types-redis = "*"
+pytest = "*"
+ptpython = "*"
