--- a/mypy.ini
+++ b/mypy.ini
@@ -5,7 +5,7 @@ disallow_untyped_defs = True
 plugins = mypy_django_plugin.main
 
 [mypy.plugins.django-stubs]
-django_settings_module = "app.settings"
+django_settings_module = "eos.settings"
 
 [mypy-*.migrations.*]
 ignore_errors = True
